--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="QR Code, Escola Navegantes, Turmas" />
     <meta name="author" content="Marcus Lot" />
     
-    <title>QR Codes - Escola Navegantes</title>
+    <title data-pt="QR Codes - Escola Navegantes" data-en="QR Codes - Navegantes School">QR Codes - Escola Navegantes</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -41,7 +41,10 @@
     </div>
 
     <!-- Título -->
+    <div class="main-title">
     <h1 data-pt="Escaneie os QR Codes" data-en="Scan the QR Codes">Escaneie os QR Codes</h1>
+    <h2 data-pt="Dia das Mães - 2025" data-en="Mother's Day - 2025">Dia das Mães - 2025</h2>
+</div>
 
     <!-- Container dos QR Codes -->
     <div class="qrcode-container">
@@ -99,7 +102,7 @@
     <!-- Rodapé -->
     <footer>
         <p><strong>Colegio Navegantes</strong></p>
-        <p>Desenvolvido por Marcus Lot, auxiliar da Professora Duda</p>
+        <p data-pt="Desenvolvido por Marcus Lot, auxiliar da Professora Duda" data-en="Developed by Marcus Lot, assistant to Teacher Duda">Desenvolvido por Marcus Lot, auxiliar da Professora Duda</p>
         <p>&copy; <span id="year"></span></p>
     </footer>
 
